add directory loading and team info

--- a/site/index.html
+++ b/site/index.html
@@ -150,6 +150,9 @@
             <div class='display-panel'>
                 <p>Path: <span id='replay_path' class='dyn_val'>/my/replay/path/replay.bc19</span></p>
                 <p>Seed: <span id='replay_seed' class='dyn_val'>1337</span></p>
+                <button id='btn_next_replay' type="button" class="btn btn-primary btn-sm">Next Replay</button>
+                <p>Red: <span id='replay_red_team' class='dyn_val'>red team</span></p>
+                <p>Blue: <span id='replay_blue_team' class='dyn_val'>blue team</span></p>
             </div>
 
             <hr/>
