--- a/site/settings/index.html
+++ b/site/settings/index.html
@@ -35,6 +35,15 @@
                         </div>
                     </form>
 
+                    <p>Link to directory (containing metadata.json file):</p>
+
+                    <div class="input-group mb-3">
+                        <input id='input_replay_directory' type="text" class="form-control" placeholder="/full/path/to/directory">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="button" id="btn_load_directory">Load</button>
+                        </div>
+                    </div>
+
                     <br/>
 
                     <p>Alternatively, if you have the URL of a replay file, provide it here:</p>
