add ability to hide position info

--- a/site/index.html
+++ b/site/index.html
@@ -330,6 +330,9 @@
                 <div class='col-auto'>
                     <button id='btn_toggle_stat_bars' type="button" class="btn btn-primary btn-sm">Toggle Stat Bars</button>
                 </div>
+                <div class='col-auto'>
+                    <button id='btn_toggle_position_info' type="button" class="btn btn-primary btn-sm">Toggle Pos Info</button>
+                </div>
             </div>
 
             <hr/>
@@ -340,6 +343,9 @@
                 <p class='selectable'>1: Castle [#1234]</a>
                 <p class='selectable'>2: Castle [#1234]</p>
                 <p class='selectable'>3: Castle [#1234]</p>
+            </div>
+
+            <div class='display-panel' id='filler'>
             </div>
 
         </div>
