add previous replay button

--- a/site/index.html
+++ b/site/index.html
@@ -164,7 +164,13 @@
             <div class='display-panel'>
                 <p>Path: <span id='replay_path' class='dyn_val'>/my/replay/path/replay.bc19</span></p>
                 <p>Seed: <span id='replay_seed' class='dyn_val'>1337</span></p>
-                <button id='btn_next_replay' type="button" class="btn btn-primary btn-sm">Next Replay</button>
+                <div class='col-5234234' style='float: left; margin-top: 5px;'>
+                    <button id='btn_previous_replay' type="button" class="btn btn-primary btn-sm">Previous Replay</button>
+                </div>
+                <div class='col-5234234' style='float: right; margin-top: 5px;'>
+                    <button id='btn_next_replay' type="button" class="btn btn-primary btn-sm">Next Replay</button>
+                </div>
+                <div style='height: 30px;'></div>
             </div>
 
             <hr/>
