--- a/site/index.html
+++ b/site/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id='health'>
-            <div class='row'>
+            <div class='row' id='replay_team_labels'>
                 <div class='col-auto' style='color: rgba(0,0,0,0);'>Red</div>
                 <div class='col-5 align-self-center'>
                     <div class='team-label' id='replay_red_team'>
@@ -164,13 +164,14 @@
             <div class='display-panel'>
                 <p>Path: <span id='replay_path' class='dyn_val'>/my/replay/path/replay.bc19</span></p>
                 <p>Seed: <span id='replay_seed' class='dyn_val'>1337</span></p>
-                <div class='col-5234234' style='float: left; margin-top: 5px;'>
-                    <button id='btn_previous_replay' type="button" class="btn btn-primary btn-sm">Previous Replay</button>
+                <div id='replay_navigation' style='height: 30px; display: none;'>
+                    <div class='col-5234234' style='float: left; margin-top: 5px;'>
+                        <button id='btn_previous_replay' type="button" class="btn btn-primary btn-sm">Previous Replay</button>
+                    </div>
+                    <div class='col-5234234' style='float: right; margin-top: 5px;'>
+                        <button id='btn_next_replay' type="button" class="btn btn-primary btn-sm">Next Replay</button>
+                    </div>
                 </div>
-                <div class='col-5234234' style='float: right; margin-top: 5px;'>
-                    <button id='btn_next_replay' type="button" class="btn btn-primary btn-sm">Next Replay</button>
-                </div>
-                <div style='height: 30px;'></div>
             </div>
 
             <hr/>
