small language change

--- a/site/settings/index.html
+++ b/site/settings/index.html
@@ -35,7 +35,7 @@
                         </div>
                     </form>
 
-                    <p>Link to directory (containing metadata.json file):</p>
+                    <p>Path to directory (containing a metadata.json file):</p>
 
                     <div class="input-group mb-3">
                         <input id='input_replay_directory' type="text" class="form-control" placeholder="/full/path/to/directory">
